Restructuring files and projects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,16 @@ include (ConfigureMSVCRuntime)
 set (MSVC_RUNTIME "shared")
 configure_msvc_runtime()
 
+if (WIN32)
+    set (ODB_PLATFORM "WIN32")
+elseif (APPLE)
+    set (ODB_PLATFORM "MACOS")
+elseif (UNIX)
+    set (ODB_PLATFORM "LINUX")
+endif ()
+
 add_subdirectory ("thirdparty/googletest")
-add_subdirectory ("odb-compiler")
+add_subdirectory ("odb-util")
 add_subdirectory ("odb-sdk")
+add_subdirectory ("odb-compiler")
 add_subdirectory ("odb-interpreter")
