--- a/odb-compiler/templates/config.hpp.in
+++ b/odb-compiler/templates/config.hpp.in
@@ -3,31 +3,28 @@
 #define STRINGIFY_(x) #x
 #define STRINGIFY(x) STRINGIFY_(x)
 
-#define ODBC_VERSION_MAJOR ${PROJECT_VERSION_MAJOR}
-#define ODBC_VERSION_MINOR ${PROJECT_VERSION_MINOR}
-#define ODBC_VERSION_PATCH ${PROJECT_VERSION_PATCH}
-#define ODBC_VERSION \
-    ((ODBC_VERSION_MAJOR << 16) | (ODBC_VERSION_MINOR << 8) | ODBC_VERSION_PATCH)
-#define ODBC_VERSION_STR \
-    STRINGIFY(ODBC_VERSION_MAJOR) "." STRINGIFY(ODBC_VERSION_MINOR) "." STRINGIFY(ODBC_VERSION_PATCH)
-#define ODBC_${ODBC_LIB_TYPE}
-#cmakedefine ODBC_DOT_EXPORT
-#cmakedefine ODBC_VERBOSE_BISON
-#cmakedefine ODBC_VERBOSE_FLEX
+#define ODBCOMPILER_VERSION_MAJOR ${PROJECT_VERSION_MAJOR}
+#define ODBCOMPILER_VERSION_MINOR ${PROJECT_VERSION_MINOR}
+#define ODBCOMPILER_VERSION_PATCH ${PROJECT_VERSION_PATCH}
+#define ODBCOMPILER_VERSION \
+    ((ODBCOMPILER_VERSION_MAJOR << 16) | (ODBCOMPILER_VERSION_MINOR << 8) | ODBCOMPILER_VERSION_PATCH)
+#define ODBCOMPILER_VERSION_STR \
+    STRINGIFY(ODBCOMPILER_VERSION_MAJOR) "." STRINGIFY(ODBCOMPILER_VERSION_MINOR) "." STRINGIFY(ODBCOMPILER_VERSION_PATCH)
 
-#cmakedefine ODBC_PLATFORM_WIN32
-#cmakedefine ODBC_PLATFORM_MACOS
-#cmakedefine ODBC_PLATFORM_LINUX
+#cmakedefine ODBCOMPILER_DOT_EXPORT
+#cmakedefine ODBCOMPILER_VERBOSE_BISON
+#cmakedefine ODBCOMPILER_VERBOSE_FLEX
 
-#if defined(ODBC_SHARED)
-#   if defined(ODBC_BUILDING)
-#       define ODBC_PUBLIC_API ${ODBC_API_EXPORT}
+#define ODBCOMPILER_${ODBCOMPILER_LIB_TYPE}
+#if defined(ODBCOMPILER_SHARED)
+#   if defined(ODBCOMPILER_BUILDING)
+#       define ODBCOMPILER_PUBLIC_API ${ODBCOMPILER_API_EXPORT}
 #   else
-#       define ODBC_PUBLIC_API ${ODBC_API_IMPORT}
+#       define ODBCOMPILER_PUBLIC_API ${ODBCOMPILER_API_IMPORT}
 #   endif
-#   define ODBC_PRIVATE_API ${ODBC_API_LOCAL}
+#   define ODBCOMPILER_PRIVATE_API ${ODBCOMPILER_API_LOCAL}
 #else
-#   define ODBC_PUBLIC_API
-#   define ODBC_PRIVATE_API
+#   define ODBCOMPILER_PUBLIC_API
+#   define ODBCOMPILER_PRIVATE_API
 #endif
 
