--- a/odb-compiler/templates/config.hpp.in
+++ b/odb-compiler/templates/config.hpp.in
@@ -15,7 +15,9 @@
 #cmakedefine ODBCOMPILER_VERBOSE_BISON
 #cmakedefine ODBCOMPILER_VERBOSE_FLEX
 
+#define ODBCOMPILER_PLATFORM_${ODB_PLATFORM}
 #define ODBCOMPILER_${ODBCOMPILER_LIB_TYPE}
+
 #if defined(ODBCOMPILER_SHARED)
 #   if defined(ODBCOMPILER_BUILDING)
 #       define ODBCOMPILER_PUBLIC_API ${ODBCOMPILER_API_EXPORT}
@@ -27,4 +29,3 @@
 #   define ODBCOMPILER_PUBLIC_API
 #   define ODBCOMPILER_PRIVATE_API
 #endif
-
