--- a/odb-sdk/templates/config.hpp.in
+++ b/odb-sdk/templates/config.hpp.in
@@ -11,7 +11,9 @@
 #define ODBRUNTIME_VERSION_STR \
     STRINGIFY(ODBRUNTIME_VERSION_MAJOR) "." STRINGIFY(ODBRUNTIME_VERSION_MINOR) "." STRINGIFY(ODBRUNTIME_VERSION_PATCH)
 
+#define ODBRUNTIME_PLATFORM_${ODB_PLATFORM}
 #define ODBRUNTIME_${ODBRUNTIME_LIB_TYPE}
+
 #if defined(ODBRUNTIME_SHARED)
 #   if defined(ODBRUNTIME_BUILDING)
 #       define ODBRUNTIME_PUBLIC_API ${ODBRUNTIME_API_EXPORT}
