Splitting off keyword loading logic into KeywordLoader base class and specialized derivatives.

--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -103,6 +103,8 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/ast/ResolveArrayFuncAmbiguity.cpp"
     "src/ast/SourceLocation.cpp"
     "src/ast/Visitor.cpp"
+    "src/keywords/ODBKeywordLoader.cpp"
+    "src/keywords/DBPKeywordLoader.cpp"
     "src/keywords/KeywordIndex.cpp"
     "src/keywords/KeywordMatcher.cpp"
     "src/parsers/db/Driver.cpp"
