--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -8,6 +8,10 @@ env:
 
 jobs:
   build:
+    env:
+      CXX: /usr/bin/gcc-10
+      CC: /usr/bin/gcc-10
+
     # The CMake configure and build commands are platform agnostic and should work equally
     # well on Windows or Mac.  You can convert this to a matrix build if you need
     # cross-platform coverage.
@@ -21,15 +25,15 @@ jobs:
       run: sudo apt update && sudo apt --only-upgrade install bison flex
 
     - name: Versions
-      run: bison --version || flex --version
+      run: bison --version; flex --version
 
-    - name: Debugging with tmate
-      # You may pin to the exact commit or the version.
-      # uses: mxschmitt/action-tmate@04c73044e0fd6cbed37de0cbdd0321d8b4359775
-      uses: mxschmitt/action-tmate@v3.1
-      with:
-        # If apt should be executed with sudo or without
-        sudo: true # optional, default is true
+#     - name: Debugging with tmate
+#       # You may pin to the exact commit or the version.
+#       # uses: mxschmitt/action-tmate@04c73044e0fd6cbed37de0cbdd0321d8b4359775
+#       uses: mxschmitt/action-tmate@v3.1
+#       with:
+#         # If apt should be executed with sudo or without
+#         sudo: true # optional, default is true
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
