--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -9,7 +9,7 @@ env:
 jobs:
   build:
     env:
-      CXX: /usr/bin/gcc-10
+      CXX: /usr/bin/g++-10
       CC: /usr/bin/gcc-10
 
     # The CMake configure and build commands are platform agnostic and should work equally
@@ -62,6 +62,4 @@ jobs:
     - name: Test
       working-directory: ${{runner.workspace}}/build
       shell: bash
-      # Execute tests defined by the CMake configuration.  
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C $BUILD_TYPE
+      run: bin/odbc_tests
