--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -30,13 +30,13 @@ jobs:
     - name: Versions
       run: bison --version; flex --version
 
-    - name: Debugging with tmate
-      # You may pin to the exact commit or the version.
-      # uses: mxschmitt/action-tmate@04c73044e0fd6cbed37de0cbdd0321d8b4359775
-      uses: mxschmitt/action-tmate@v3.1
-      with:
-        # If apt should be executed with sudo or without
-        sudo: true # optional, default is true
+    # - name: Debugging with tmate
+    #   # You may pin to the exact commit or the version.
+    #   # uses: mxschmitt/action-tmate@04c73044e0fd6cbed37de0cbdd0321d8b4359775
+    #   uses: mxschmitt/action-tmate@v3.1
+    #   with:
+    #     # If apt should be executed with sudo or without
+    #     sudo: true # optional, default is true
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
