Remove VERBOSE flag from GitHub Actions

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -57,7 +57,7 @@ jobs:
       working-directory: ${{runner.workspace}}/build
       shell: bash
       # Execute the build.  You can specify a specific target with "--target <NAME>"
-      run: VERBOSE=1 cmake --build . --config $BUILD_TYPE
+      run: cmake --build . --config $BUILD_TYPE
 
     - name: Test
       working-directory: ${{runner.workspace}}/build
