--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -27,24 +27,24 @@ jobs:
       env:
         cache-name: cache-bison
       with:
-        path: /usr/local/bin/bison
+        path: bison-${{ env.BISON_VERSION }}
         key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ env.BISON_VERSION }}
         restore-keys: |
           ${{ runner.os }}-build-${{ env.cache-name }}-
           ${{ runner.os }}-build-
           ${{ runner.os }}-
 
-    - name: Debugging with tmate
-      # You may pin to the exact commit or the version.
-      # uses: mxschmitt/action-tmate@04c73044e0fd6cbed37de0cbdd0321d8b4359775
-      uses: mxschmitt/action-tmate@v3.1
-      with:
-        # If apt should be executed with sudo or without
-        sudo: true # optional, default is true
+    # - name: Debugging with tmate
+    #   # You may pin to the exact commit or the version.
+    #   # uses: mxschmitt/action-tmate@04c73044e0fd6cbed37de0cbdd0321d8b4359775
+    #   uses: mxschmitt/action-tmate@v3.1
+    #   with:
+    #     # If apt should be executed with sudo or without
+    #     sudo: true # optional, default is true
 
     - name: Build bison
       if: steps.cache-bison.outputs.cache-hit != 'true'
-      run: wget http://ftp.gnu.org/gnu/bison/bison-$BISON_VERSION.tar.gz && tar -zxvf bison-$BISON_VERSION.tar.gz && pushd bison-$BISON_VERSION/ && ./configure && make && popd
+      run: wget http://ftp.gnu.org/gnu/bison/bison-$BISON_VERSION.tar.gz && tar -zxvf bison-$BISON_VERSION.tar.gz && pushd bison-$BISON_VERSION/ && ./configure && make && popd && export PATH=bison-$BISON_VERSION/src/:$PATH
 
     - name: Update packages
       run: sudo apt update && sudo apt --only-upgrade install flex
