--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -47,7 +47,7 @@ jobs:
       run: wget http://ftp.gnu.org/gnu/bison/bison-$BISON_VERSION.tar.gz && tar -zxvf bison-$BISON_VERSION.tar.gz && pushd bison-$BISON_VERSION/ && ./configure && make && popd
 
     - name: Add bison to PATH
-      run: echo "${{github.workspace}}/bison-$BISON_VERSION/src/" >> $GITHUB_PATH
+      run: echo "${{github.workspace}}/bison-$BISON_VERSION/src/" >> $GITHUB_PATH && export BISON_PKGDATADIR=${{runner.workspace}}/bison-${{ env.BISON_VERSION }}/data 
     
     - name: Update packages
       run: sudo apt update && sudo apt --only-upgrade install flex
@@ -74,7 +74,7 @@ jobs:
       working-directory: ${{runner.workspace}}/build
       shell: bash
       # Execute the build.  You can specify a specific target with "--target <NAME>"
-      run: cmake --build . --config $BUILD_TYPE
+      run: VERBOSE=1 cmake --build . --config $BUILD_TYPE
 
     - name: Test
       working-directory: ${{runner.workspace}}/build
