--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -12,24 +12,26 @@ jobs:
       CXX: /usr/bin/g++-10
       CC: /usr/bin/gcc-10
 
-    # The CMake configure and build commands are platform agnostic and should work equally
-    # well on Windows or Mac.  You can convert this to a matrix build if you need
-    # cross-platform coverage.
-    # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
 
     steps:
     - uses: actions/checkout@v2
 
     - name: Build bison
       run: wget http://ftp.gnu.org/gnu/bison/bison-3.7.tar.gz && tar -zxvf bison-3.7.tar.gz && pushd bison-3.7/ && ./configure && sudo make install && popd
+      if: ${{ matrix.os != 'windows-latest' }}
 
     - name: Update packages
       run: sudo apt update && sudo apt --only-upgrade install flex
+      if: ${{ matrix.os != 'windows-latest' }}
 
     - name: Versions
       run: bison --version; flex --version
-
+      if: ${{ matrix.os != 'windows-latest' }}
+      
     # - name: Debugging with tmate
     #   # You may pin to the exact commit or the version.
     #   # uses: mxschmitt/action-tmate@04c73044e0fd6cbed37de0cbdd0321d8b4359775
