--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -36,6 +36,9 @@ jobs:
       run: |
         Invoke-WebRequest -Uri https://github.com/lexxmark/winflexbison/files/5146142/win_flex_bison-2.5.23.zip -OutFile win_flex_bison-2.5.23.zip
         Expand-Archive win_flex_bison-2.5.23.zip -DestinationPath win_flex_bison-2.5.23 -Force
+        $ENV:PATH="$ENV:PATH;${{runner.workspace}}\win_flex_bison-2.5.23"
+      if: ${{ matrix.os == 'windows-latest' }}
+
 
     # - name: Debugging with tmate
     #   # You may pin to the exact commit or the version.
