--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -94,6 +94,7 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/ast/FuncCall.cpp"
     "src/ast/Keyword.cpp"
     "src/ast/Literal.cpp"
+    "src/ast/Loop.cpp"
     "src/ast/Node.cpp"
     "src/ast/Process.cpp"
     "src/ast/ResolveArrayFuncAmbiguity.cpp"
@@ -146,10 +147,10 @@ if (${ODBCOMPILER_TESTS})
         # "tests/src/test_db_func_decl.cpp"
         # "tests/src/test_db_goto.cpp"
         "tests/src/test_db_keyword.cpp"
-        # "tests/src/test_db_loop_do.cpp"
-        # "tests/src/test_db_loop_for.cpp"
-        # "tests/src/test_db_loop_repeat.cpp"
-        # "tests/src/test_db_loop_while.cpp"
+        "tests/src/test_db_loop_do.cpp"
+        "tests/src/test_db_loop_for.cpp"
+        "tests/src/test_db_loop_repeat.cpp"
+        "tests/src/test_db_loop_while.cpp"
         # "tests/src/test_db_op_add.cpp"
         # "tests/src/test_db_op_precedence.cpp"
         "tests/src/test_db_remarks.cpp"
